tests/fail/invalid_spread.stderr
error: expected an expression
 --> tests/fail/invalid_spread.rs:7:15
  |
7 |             ..,
  |               ^
